# RegHunterZ-Solver

./: .gitignore  LICENSE  PATCH_NOTES_v17.txt  README.md  README.txt  README_AUTOSTART.txt  README_GPT5.txt  README_HH_OCR.txt  RUN_ME.bat  create_scaffold.sh  create_scaffold_Version4.sh  github_workflows_push-scaffold.yml  github_workflows_push-scaffold_Version4.yml  install_all.bat  installer.bat  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_app.bat  run_app_gui.bat  run_debug.bat  run_hh_ocr_demo.py  sitecustomize.py  start.bat  start_ai_only.bat  start_solver_only.bat
KKP_INLINE_RANGE_V30/: README.md  demo.py
Scripts/: activate  activate.bat  activate.fish
app/: __init__.py  calibrator.py  coach_tab.py  config.yaml  config_io.py  hidpi.py  logger.py  main.py  ocr_engine.py  range_painter.py  replay.py  safe.py  tesseract_finder.py  utils_cv.py
assets/: range_grid_norm_v1.json
client/: package.json
diag/: logo_check.py
inline_range_hh/: _autowire_helper.py  hh_inline.py  range_util.py
integrations/: range_buttons_inject.py
kkpoker_ai/: api.py  coach.py  cost_saver.py  hh_parser.py
server/: api-solve.test.js  app.js  index.js  package.json
servver/: index.js
tests/: test_cli.py  test_diag_button.py  test_logo_diagnostics.py  test_logo_embedded.py  test_logo_resize.py  test_logo_splitter_paint.py  test_paint_logo_mainwindow.py  test_purge_overlays.py  test_visual_replayer_sanity.py
tools/: create_scaffold.sh
ui/: card_picker.py  chat_widget.py  main_window.py  manual_entry.py  range_selector.py  replay_view.py  replayer2_widget.py  (+3 more)
(+11 files in other folders)
